appId: app.griit.challenge-tracker
---
- launchApp:
    stopApp: true
- tapOn:
    text: "Dismiss"
    optional: true
- tapOn:
    text: "Not now"
    optional: true
- tapOn:
    text: "Cancel"
    optional: true
- tapOn: "Home"
- runFlow:
    when:
      visible: "Expand section, 7K Steps"
    commands:
      - tapOn: "Expand section, 7K Steps"
- assertVisible: "Walk 7,000 steps"
- scrollUntilVisible:
    element: "Get to the gym"
    direction: DOWN
- assertVisible: "Get to the gym"
