appId: app.griit.challenge-tracker
---
- launchApp:
    stopApp: true
- tapOn:
    text: "Dismiss"
    optional: true
- tapOn:
    text: "Not now"
    optional: true
- tapOn: "Discover"
- assertVisible: "Show Up 7"
